# go

./: .env.example  .gitignore  MERGE_PLAN.md  Makefile  README.md  TODO.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260315_000001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  commitment_agent.py  context_agent.py  discovery_agent.py  llm_referee_agent.py  momentum_agent.py  orchestrator.py  social_proof_agent.py  types.py
backend/app/models/: __init__.py  activation.py  enums.py  event.py  opportunity.py  user.py  venue.py
backend/app/schemas/: __init__.py  activation.py  event.py  opportunity.py  user.py
backend/app/services/: booking.py  calendar_sync.py  demo_social_graph.py  event_ingestion.py  geocoding.py  notification.py  openclaw.py  openclaw_profile_loop.py  post_event_profile.py  venue_resolver.py
backend/app/tasks/: __init__.py  cleanup.py  ingest_events.py  run_activations.py
backend/app/utils/: geo.py  llm.py  security.py  time_helpers.py
backend/scripts/: __init__.py  seed_demo_social_proof.py  seed_london_venues.py  seed_supabase_demo_places.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_llm_referee_agent.py  test_orchestrator.py
backend/tests/test_api/: test_activation_endpoints.py  test_activation_mapping_logic.py  test_app_bootstrap.py  test_app_lifecycle.py  test_auth_users.py  test_demo_social_endpoints.py  test_events_nearby_logic.py  test_schema_contract.py
(+112 files in other folders)
