[project]
name = "firstmove-backend"
version = "0.1.0"
description = "FirstMove activation engine backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "api: API endpoint tests",
    "agents: Agent orchestration tests",
    "services: Service layer tests",
    "tasks: Celery/task runtime tests",
]
